--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
     "express": "~4.16.1",
+    "json-2-csv": "^5.5.6",
     "mongodb": "^6.9.0",
     "morgan": "~1.9.1"
   }
