Adding audit logs

--- a/.env.default
+++ b/.env.default
@@ -1,4 +1,5 @@
-MONGO_URI="put your uri here"
-DB_NAME="Put the name of the database to use here"
-CATALOG_COLLECTION="Put the name of the collection to use as a catalog here"
-STOCK_COLLECTION="Put the name of the collection to store stock numbers here"
+MONGO_URI=""
+DB_NAME=""
+CATALOG_COLLECTION=""
+STOCK_COLLECTION=""
+AUDIT_COLLECTION=""
