--- a/.env.default
+++ b/.env.default
@@ -2,3 +2,4 @@ MONGO_URI="put your uri here"
 DB_NAME="Put the name of the database to use here"
 CATALOG_COLLECTION="Put the name of the collection to use as a catalog here"
 STOCK_COLLECTION="Put the name of the collection to store stock numbers here"
+AUDIT_COLLECTION="Put the name of the collection to store audit logs here"
