normalize .env.default to sane values
also document every environment variable used

--- a/.env.default
+++ b/.env.default
@@ -1,5 +1,7 @@
-MONGO_URI="put your uri here"
-DB_NAME="Put the name of the database to use here"
-CATALOG_COLLECTION="Put the name of the collection to use as a catalog here"
-STOCK_COLLECTION="Put the name of the collection to store stock numbers here"
-AUDIT_COLLECTION="Put the name of the collection to store audit logs here"
+MONGO_URI="mongodb://localhost/mydb"
+CATALOG_COLLECTION="catalog"
+STOCK_COLLECTION="stock"
+AUDIT_COLLECTION="audit"
+ROLE_COLLECTION="roles"
+USER_COLLECTION="users"
+PORT="4000"
