--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
     "express": "~4.16.1",
+    "jose": "^5.9.6",
     "json-2-csv": "^5.5.6",
     "mongodb": "^6.9.0",
     "morgan": "~1.9.1"
