Added missing parameter to env default and added index creation on name to catalog

--- a/.env.default
+++ b/.env.default
@@ -1,4 +1,5 @@
 MONGO_URI="mongodb://localhost/mydb"
+DB_NAME="db"
 CATALOG_COLLECTION="catalog"
 STOCK_COLLECTION="stock"
 AUDIT_COLLECTION="audit"
